# rusty_term

./: .gitignore  CODE_REVIEW.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES.md  gap-analysis.md
.github/workflows/: ci.yml  release.yml
aether/: Cargo.toml  README.md
aether/demo/: index.html
aether/src/: lib.rs  main.rs
aether/src/ui/: glass.rs  mod.rs
bench/: README.md  gen_workloads.py  run_bench.py  terminals.json
docs/: FEATURES.md  IMPROVEMENTS-PLAN.md  grok-session-analysis-2026-07-17.md  handoff-windows-2026-07.md  repo-analysis.md
docs/research/: bidi-scoping-2026-07.md  capability-assessment-2026.md  conpty-attach-2026-07.md  gap-analysis-2026-07.md  implementation-status.md  terminal-stack-spec-tree.html  terminal-stack-synthesis.md
docs/research/handoff/: rusty_term_skeleton.rs  rusty_term_snapshot_handoff.rs
extra/: gen_ligtest_font.py  reload_test.py  rusty_term.terminfo  smoke_config.py  smoke_config.toml  smoke_conpty.py
extra/shell-integration/: bash.sh  fish.fish  pwsh.ps1  zsh.sh
fuzz/: Cargo.toml
fuzz/fuzz_targets/: graphics.rs  parser.rs
handoff/: rusty_term_HANDOFF.md
l13/: Cargo.toml
l13/src/: lib.rs
src/: config.rs  input.rs  keymap.rs  lib.rs  main.rs  render.rs  shells.rs  term.rs
src/backend/: mod.rs  unix.rs  windows.rs
src/core/: arabic.rs  arabic_tables.rs  base64.rs  bidi.rs  bidi_tables.rs  canon_tables.rs  cell.rs  channel.rs  charset.rs  color.rs  gif.rs  grid.rs  inflate.rs  iterm.rs  jpeg.rs  kitty.rs  kitty_diacritics.rs  mod.rs  osc.rs  parser.rs  png.rs  sixel.rs  tests.rs  webp.rs
src/gui/: access.rs  boxdraw.rs  control.rs  cpu.rs  font.rs  gpu.rs  hotkey.rs  input.rs  layout.rs  mod.rs  mouse.rs  render.rs  settings.rs  shape.rs  taskbar.rs  window.rs
src/runtime/: mod.rs  threaded.rs  tokio_rt.rs
src/web_bridge/: mod.rs  stats.rs  ws.rs
tools/: gen_arabic_tables.py  gen_bidi_tables.py  gen_canon_table.py
web/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
web/e2e/: e2e.mjs  live-bridge.mjs
web/src/: App.tsx  index.css  main.tsx  storage.ts
web/src/assist/: chatSegments.ts  heuristics.ts  llmProvider.ts
web/src/components/terminal/: AiOrb.tsx  AssistPanel.tsx  CommandCard.tsx  CommandPalette.tsx  CommandStream.tsx  SearchOverlay.tsx  SettingsSheet.tsx  SideDock.tsx  StatusRibbon.tsx  TerminalShell.tsx  TerminalView.tsx  cardGroups.ts  commandTracker.ts  transcript.ts  types.ts  useOverlay.ts
web/src/theme/: apply.ts  tokens.ts
web/src/transport/: bridge.ts
