[package]
name = "aether"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.29", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
