# Coverage-guided fuzzing (G37): `cargo +nightly fuzz run <target>` from the
# repo root (cargo-fuzz + nightly required — this crate is excluded from the
# main workspace so ordinary builds never touch it).
[package]
name = "rusty_term-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
rusty_term = { path = ".." }

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "graphics"
path = "fuzz_targets/graphics.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
